--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Happy Birthday Website 2.0 | Aoudumber Bade">
     <meta name="github" content="https://github.com/Aoudumber-Bade">
-    <title>Mehwish Birthday</title>
+    <title>Protuu Birthday</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -54,7 +54,7 @@
                 <div class="btn">
                     <button id="btn__letter">
                         <div class="mail">
-                            Click Here Mehwish
+                            Click Here Apu
                             <i class="fa-regular fa-envelope"></i>
                         </div>
                     </button>
@@ -68,7 +68,7 @@
                     </div>
                     <div class="name">
                         <i class="fa-solid fa-heart"></i>
-                        <span>Dear Mehwish</span>
+                        <span>Dear Apu</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div class="balloon_one">
@@ -129,7 +129,7 @@
                     <div class="userImg">
                         <img src="images/unnamed.png" alt="">
                     </div>
-                    <h4 class="username">To: Mehwish 💖<span class="underline"></span></h4>
+                    <h4 class="username">To: Protuu 💖<span class="underline"></span></h4>
 
                     <h3>Happy Birthday</h3>
                     <div class="imageCute">
@@ -139,14 +139,19 @@
                 <div class="card2">
                     <div class="card2-content">
                         <h3>To You!</h3>
-                        <h2>Happy birthday 🥳🎂🥳 chanda the day you come into my life I was not really much attached to
-                            you but day by day you became close to my heart . And now you are truly my younger sister. I
-                            wish I could remove some of the pain from your life which you are bearing alone. But you're
-                            always welcome 🤗 you can talk anytime you want to talk specially those which you can't say
-                            to others. And this year your all dreams come true . I wish that your
-                            brother could wish you but if couldn't wish on him behalf I am wishing you happy birthday
-                            🎈🎂🎈 sana . Don't be Sad ok be happy 😌
-                        </h2>
+                        <h2>Happy Birthday to a truly special soul. 
+
+                            On this blessed day, I pray that Allah (SWT) showers you with His 
+                            infinite mercy, guides you toward the path of success, and fills 
+                            your life with peace and Barakah. 
+
+                            Even though our connection remains behind the screen and I have 
+                            never seen your face, I deeply value the person you are and the 
+                            positive impact you have. May all your righteous prayers be 
+                            answered, and may you always stay under His divine protection. 
+
+                            Wishing you a year full of blessings and happiness. Ameen."
+                            </h2>
 
                         <div class="imageCute2">
                             <img src="cute2.png" alt="">
@@ -159,8 +164,19 @@
 
 </body>
 <script>
-    let datetxt = "27 May";
-    let datatxtletter = "My love. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
+    let datetxt = "21 February";
+    let datatxtletter = "To a very special soul 
+    On this blessed day, I silently thank the Almighty for your presence 
+    in my life. You are truly a gift, and I value the person you are 
+    beyond words.
+
+    I wish you all the best, good health, and a life filled with 
+    Barakah and joy. I hope and pray that you are always 
+    surrounded by happiness and peace. 
+
+    May your year ahead be as beautiful as your heart. 
+    Happy Birthday to you. 💕"
+    ;
     let titleLetter = "To you";
     let charArrDate = datetxt.split('');
     let charArrDateLetter = datatxtletter.split('');
